# err-backend-mattermost

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  mattermost.plug  mattermost.py  mattermostapi.py  mattermostclient.py  pyproject.toml  requirements.txt
docs/: conf.py  configuration.rst  developer_guide.rst  index.rst  installation.rst  user_guide.rst
src/: mattermostPerson.py  mattermostRoom.py  mattermostRoomOccupant.py
src/err-backend-mattermost/: err-backend-mattermost.plug  err-backend-mattermost.py
src/err-backend-mattermost/mattermostlib/: mattermostRoom.py
tests/: config.py  docker-compose.yml  init_mattermost.sh  requirements.txt
tests/plugins/: test.plug  test.py
